--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "angular": "^1.5.3",
-    "angular-route": "^1.5.3"
+    "angular-route": "^1.5.3",
+    "angular-animate": "^1.5.3"
   }
 }
